Bug 81361. Set mBytesPerPix for Mac based on mImagePixMap.pixelSize.  r=lordpixel sr=tor